# doc-chatbot

./: .gitignore  README.md  main.py  pyproject.toml  rag.py
.github/workflows/: build-release.yml  windows-build.yml  windows-release.yml
app/: __init__.py  config.py  watcher.py
app/ui/: __init__.py  dialogs.py  docs_manager.py  main_window.py
tools/: package_release.py
